[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/entity/EntityBase.gd" type="Script" id=1]
[ext_resource path="res://nodes/entity/Hurtbox.tscn" type="PackedScene" id=2]

[node name="EntityBase" type="KinematicBody2D"]
pause_mode = 1
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color( 0, 0.0156863, 1, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]

[node name="I_frame_timer" type="Timer" parent="."]
process_mode = 0
one_shot = true

[connection signal="tree_exiting" from="." to="." method="_on_EntityBase_tree_exiting"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="I_frame_timer" to="." method="_on_I_frame_timer_timeout"]

[editable path="Hurtbox"]
